# t32_vio

./: .gitignore  CMakeLists.txt  FILELIST.md  build-mips.sh  constraints.md  test-cmake.sh  update.sh
build-mips/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mips/examples/: Makefile  cmake_install.cmake
build-mips/t32vio-mips-t32-20260324/: README.md  USAGE.txt
cmake/: mips-linux-gnu.cmake  mips-linux-gnu.cmake.example
docs/: design.md
examples/: CMakeLists.txt  INTEGRATION_GUIDE.md  t32_vio_demo.cpp
include/: frontend_levio.h  imu_preint_levio.h  t32vio.h
src/: frontend.c  frontend.cpp  frontend_levio.cpp  imu_preint.c  imu_preint_levio.c  msckf.cpp  t32vio.cpp
tests/: CMakeLists.txt  test_basic.cpp
